Sat Apr 16 10:33:48 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: quick hack... prepend DESTDIR.
	  still have restriction on DESTDIR ("", "/", "e:")

Sat Apr 16 03:59:42 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: check for OPENSSL_cleanse.

	* ext/openssl/openssl_missing.h: ditto.

Fri Apr 15 22:40:19 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/tests/testWIN32OLE.rb: add test for WIN32OLE.codepage=

	* ext/win32ole/tests/testOLETYPELIB.rb: correct expected message.

Fri Apr 15 22:04:07 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(ole_invoke): retry after converting Qnil
	  to VT_EMPTY.

Thu Apr 14 19:05:06 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper] (regexp): dispatch regexp option.
	  [ruby-Bugs:1688]

	* ext/ripper/lib/core.rb: regenerated (interface changed).

Thu Apr 14 18:59:43 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_file): ignore exceptions caused by
	  chmod.

	* lib/fileutils.rb (remove_dir): try to get rights to rmdir.
	  [ruby-Bugs:1502]

Thu Apr 14 18:51:02 2005  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/ruby-lex.rb, lib/irb/slex.rb: bug fix of [ruby-Bugs-1745]

	* lib/irb/ext/loader.rb, lib/irb/ext/save-history.rb:
	  fix location of @RCS_ID

	* lib/irb/cmd/help.rb: a lost of release IRB 0.9.5.

Thu Apr 14 15:10:30 2005  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/notifier.rb, lib/irb/output-method.rb, lib/irb/ext/history.rb
	  fixed warning of 'ruby -w'

Thu Apr 14 05:35:45 2005  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* doc/irb/irb.rd.ja: a lost  of release IRB 0.9.5.

	* lib/irb/slex.rb: bug fix by [ruby-core:04707].

Thu Apr 14 00:20:31 2005 Keiju Ishitsuka <keiju@ruby-lang.org>
	* bin/irb lib/irb.rb lib/irb/...: IRB 0.9.5.
	
Wed Apr 13 23:40:21 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.3 -> 0.1.4.
